Fix: CSS font-size and vertical-align issue

--- a/res/style/wordReader.css
+++ b/res/style/wordReader.css
@@ -47,9 +47,9 @@ div.word {
     width: 25rem;
     box-shadow: 0px 0px 0.625rem #CCCCCC;
     padding: 0.4375rem;
-    font-size: 1.25rem;
     color: #505050;
     margin-top: 0.5rem;
+    line-height: 1.7rem;
     overflow: hidden;
     transition: all 0.5s ease-in-out;
 }
@@ -66,6 +66,8 @@ div.js-item-hover {
 span.wordText {
     float: left;
     padding-left: 1.875rem;
+    font-size: 1.45rem;
+    vertical-align: middle;
 }
 
 span.buttons {
