--- a/res/style/wordReaderMobile.css
+++ b/res/style/wordReaderMobile.css
@@ -44,7 +44,6 @@ div.word {
     background-color: #F9F9F9;
     box-shadow: 0px 0px 0.625rem #CCCCCC;
     padding: 2vw;
-    font-size: 5.5vw;
     color: #505050;
     margin-top: 2.4vw;
     overflow: hidden;
@@ -59,11 +58,14 @@ div.js-item-hover {
 span.wordText {
     float: left;
     padding-left: 5vw;
+    font-size: 5.7vw;
+    vertical-align: middle;
 }
 
 span.buttons {
     padding-right: 5vw;
     float: right;
+    vertical-align: middle;
 }
 
 img.Button {
